@@ -3,7 +3,7 @@
 ########################################################################
 # Extension Manager/Repository config file for ext: "remote_server"
 #
-# Auto generated 20-07-2008 15:27
+# Auto generated 22-08-2008 22:26
 #
 # Manual updates:
 # Only the data in the array - anything else is removed by next write.
@@ -29,7 +29,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'clearCacheOnLoad' => 0,
 	'lockType' => '',
 	'author_company' => '',
-	'version' => '0.1.0',
+	'version' => '0.1.1',
 	'constraints' => array(
 		'depends' => array(
 		),
@@ -38,7 +38,7 @@ $EM_CONF[$_EXTKEY] = array(
 		'suggests' => array(
 		),
 	),
-	'_md5_values_when_last_written' => 'a:14:{s:9:"ChangeLog";s:4:"c607";s:10:"README.txt";s:4:"edf1";s:36:"class.tx_remoteserver_beuserauth.php";s:4:"a075";s:30:"class.tx_remoteserver_helo.php";s:4:"f472";s:34:"class.tx_remoteserver_response.php";s:4:"0910";s:8:"conf.php";s:4:"be6a";s:21:"ext_conf_template.txt";s:4:"1a27";s:12:"ext_icon.gif";s:4:"e0f4";s:17:"ext_localconf.php";s:4:"5d28";s:9:"index.php";s:4:"16c2";s:8:"init.php";s:4:"3f1a";s:8:"json.php";s:4:"e081";s:14:"doc/manual.sxw";s:4:"6e92";s:18:"samples/caller.php";s:4:"26fa";}',
+	'_md5_values_when_last_written' => 'a:14:{s:9:"ChangeLog";s:4:"f809";s:10:"README.txt";s:4:"edf1";s:36:"class.tx_remoteserver_beuserauth.php";s:4:"a075";s:30:"class.tx_remoteserver_helo.php";s:4:"f472";s:34:"class.tx_remoteserver_response.php";s:4:"9ac9";s:8:"conf.php";s:4:"be6a";s:21:"ext_conf_template.txt";s:4:"1a27";s:12:"ext_icon.gif";s:4:"e0f4";s:17:"ext_localconf.php";s:4:"5d28";s:9:"index.php";s:4:"16c2";s:8:"init.php";s:4:"3f1a";s:8:"json.php";s:4:"e081";s:14:"doc/manual.sxw";s:4:"5b18";s:18:"samples/caller.php";s:4:"26fa";}',
 	'suggests' => array(
 	),
 );
